--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Embedded Style Sheet</title>
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="https://github.com/KylePalomo/home-run/blob/master/stylesheet.css">
  </head>
  <body>
 
